Fix blog post layout issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -317,6 +317,9 @@ body {
   }
 }
 
+.twitter-tweet, .twitter-tweet-rendered {
+  margin-left: 30px;
+}
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   body, .site-header, .site-footer {
     background-size: 50px 50px;
